WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170968
[WK2] Cannot select text on nytimes.com when the selection granularity is WKSelectionGranularityCharacter
https://bugs.webkit.org/show_bug.cgi?id=170968
Summary
[WK2] Cannot select text on nytimes.com when the selection granularity is WKS...
Wenson Hsieh
Reported
2017-04-18 15:13:51 PDT
0. Enable selection granularity character by default via Safari internal settings 1. Go to nytimes.com 2. Go to any article 3. Long press to try and select a word Observed: the selection does not change. Expected: the word should be selected. Not a regression.
Attachments
Patch
(6.74 KB, patch)
2017-04-18 15:26 PDT
,
Wenson Hsieh
mitz: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(6.74 KB, patch)
2017-04-18 15:29 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews124 for ios-simulator-wk2
(871.73 KB, application/zip)
2017-04-18 17:12 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-04-18 15:15:07 PDT
<
rdar://problem/31692560
>
Wenson Hsieh
Comment 2
2017-04-18 15:26:14 PDT
Created
attachment 307425
[details]
Patch
mitz
Comment 3
2017-04-18 15:27:53 PDT
Comment on
attachment 307425
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=307425&action=review
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1532 > + // If we're current editing an assisted node, only allow the selection to move within that assisted node.
currently?
Wenson Hsieh
Comment 4
2017-04-18 15:29:15 PDT
Comment on
attachment 307425
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=307425&action=review
>> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1532 >> + // If we're current editing an assisted node, only allow the selection to move within that assisted node. > > currently?
Good catch! Fixed.
Wenson Hsieh
Comment 5
2017-04-18 15:29:34 PDT
Created
attachment 307426
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2017-04-18 16:12:33 PDT
Comment on
attachment 307426
[details]
Patch for landing Clearing flags on attachment: 307426 Committed
r215484
: <
http://trac.webkit.org/changeset/215484
>
Build Bot
Comment 7
2017-04-18 17:11:59 PDT
Comment on
attachment 307425
[details]
Patch
Attachment 307425
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3559617
New failing tests: webrtc/captureCanvas-webrtc.html
Build Bot
Comment 8
2017-04-18 17:12:00 PDT
Created
attachment 307438
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug